<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="250dp"
        android:id="@+id/display"
        android:gravity="center_vertical"
        android:hint="0"
        android:textSize="40dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="50dp"
        android:paddingBottom="30dp">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/nine"
            android:id="@+id/nine"
            android:textSize="20dp"
            android:layout_margin="3dp"


            />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/eight"
            android:id="@+id/eight"
            android:textSize="20dp"
            android:layout_margin="3dp"

            />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/seven"
            android:id="@+id/Seven"
            android:textSize="20dp"
            android:layout_margin="3dp"
            />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/six"
            android:id="@+id/Six"
            android:textSize="20dp"
            android:layout_margin="3dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingBottom="30dp">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/five"
            android:id="@+id/five"
            android:textSize="20dp"
            android:layout_margin="3dp"
            />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/four"
            android:id="@+id/four"
            android:textSize="20dp"
            android:layout_margin="3dp"
            />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/three"
            android:id="@+id/three"
            android:textSize="20dp"
            android:layout_margin="3dp"
            />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/two"
            android:id="@+id/two"
            android:textSize="20dp"
            android:layout_margin="3dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingBottom="30dp">


        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/one"
            android:id="@+id/one"
            android:textSize="20dp"
            android:layout_margin="3dp"
            />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/zero"
            android:id="@+id/zero"
            android:textSize="20dp"
            android:layout_margin="3dp"
            />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/clear"
            android:id="@+id/clear"
            android:textSize="20dp"
            android:layout_margin="3dp"
            />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/del"
            android:id="@+id/delete"
            android:textSize="20dp"
            android:layout_margin="3dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingBottom="30dp">


        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/divide"
            android:id="@+id/divide"
            android:textSize="20dp"
            android:layout_margin="3dp"
            />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/minus"
            android:id="@+id/minus"
            android:textSize="20dp"
            android:layout_margin="3dp"
            />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/plus"
            android:id="@+id/plus"
            android:textSize="20dp"
            android:layout_margin="3dp"
            />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/multiply"
            android:id="@+id/multiply"
            android:textSize="20dp"
            android:layout_margin="3dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingBottom="30dp">
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/submit"
            android:id="@+id/submit"
            android:textSize="20dp"
            android:layout_margin="3dp"
            />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/decimal"
            android:id="@+id/decimal"
            android:textSize="20dp"
            android:layout_margin="3dp"
            />
    </LinearLayout>
</LinearLayout>